kyverno/policies/argocd/add-ignore-resource-updates-annotation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-ignore-resource-updates-annotation
  annotations:
    policies.kyverno.io/title: Add Ignore Update Annotations On Child Resources
    policies.kyverno.io/category: Argo
    policies.kyverno.io/description: >-
      ArgoCD will only apply `ignoreResourceUpdates` configuration to tracked 
      resources of an application. This means dependant resources, such as a 
      `ReplicaSet` and `Pod` created by a `Deployment`, will not ignore any 
      updates and trigger a reconcile of the application for any changes.

      To apply `ignoreResourceUpdates` configuration to an untracked resource, 
      this policy will add the `argocd.argoproj.io/ignore-resource-updates=true` 
      annotation in the dependent resources manifest if not already set.

      Only add annotation if parent resource is tracked by ArgoCD otherwise
      ArgoCD will create Hash map of all child (say Pod) resource and waste CPU.
spec:
  background: false # only update resource via webhook to avoid unnecessary restarts
  rules:
    - name: add-ignore-resource-updates-annotations-pods
      match:
        any:
          - resources:
              kinds:
                - DaemonSet
                - Deployment
                - StatefulSet
              annotations:
                argocd.argoproj.io/tracking-id: "?*"
      mutate:
        patchStrategicMerge:
          spec:
            template:
              metadata:
                annotations:
                  +(argocd.argoproj.io/ignore-resource-updates): "true"
    - name: add-ignore-resource-updates-annotations-cronjob
      match:
        any:
          - resources:
              kinds:
                - CronJob
              annotations:
                argocd.argoproj.io/tracking-id: "?*"
      mutate:
        patchStrategicMerge:
          spec:
            jobTemplate:
              metadata:
                annotations:
                  +(argocd.argoproj.io/ignore-resource-updates): "true"
              spec:
                template:
                  metadata:
                    annotations:
                      +(argocd.argoproj.io/ignore-resource-updates): "true"
